# NIX_Testing

./: .gitignore  3  Example.ipynb  NIX_Testing.py  README.md  Spectra_test.ipynb  files.txt  get_header_info.py  setup.py
NIX_Testing/: HDRL.py  HDRL2.c  __init__.py
data/: .~lock.ThAr_lines.csv#  ThAr_lines.csv
docs/: Example.html  HDRL.html  NIXTesting.html  Spectra_test.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs/NIX_Testing/: HDRL.html  HDRL2.html  index.html
docs/_sources/: HDRL.rst.txt  index.rst.txt
docs/source/: conf.py  index.rst  intro.rst
hdrldemo-1.2.0/: Makefile  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
hdrldemo-1.2.0/admin/: doxygen.am
hdrldemo-1.2.0/doxygen/: Doxyfile  Doxyfile.in
hdrldemo-1.2.0/hdrl/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  hdrl.h  hdrl_buffer.c  hdrl_catalogue.c  hdrl_collapse.c  hdrl_collapse.h  hdrl_dar.c  hdrl_fpn.c  hdrl_fringe.c  hdrl_image_math.c  hdrl_image_math.h  hdrl_imagelist_basic.c  hdrl_imagelist_basic.h  hdrl_overscan.c  hdrl_overscan.h  hdrl_parameter.h  hdrl_prototyping.c  hdrl_strehl.c  hdrl_utils.c  hdrl_utils.h  libtool
hdrldemo-1.2.0/hdrl/.deps/: libhdrl_la-hdrl_DER_SNR.Plo  libhdrl_la-hdrl_bpm_2d.Plo  libhdrl_la-hdrl_bpm_3d.Plo  libhdrl_la-hdrl_bpm_fit.Plo  libhdrl_la-hdrl_bpm_utils.Plo  libhdrl_la-hdrl_buffer.Plo  libhdrl_la-hdrl_catalogue.Plo  libhdrl_la-hdrl_collapse.Plo  libhdrl_la-hdrl_combine.Plo  libhdrl_la-hdrl_correlation.Plo  libhdrl_la-hdrl_dar.Plo  libhdrl_la-hdrl_efficiency.Plo  libhdrl_la-hdrl_elemop.Plo  libhdrl_la-hdrl_fit.Plo  libhdrl_la-hdrl_flat.Plo  libhdrl_la-hdrl_fpn.Plo  libhdrl_la-hdrl_frameiter.Plo  libhdrl_la-hdrl_fringe.Plo  libhdrl_la-hdrl_image.Plo  libhdrl_la-hdrl_image_math.Plo  libhdrl_la-hdrl_imagelist_basic.Plo  libhdrl_la-hdrl_imagelist_io.Plo  libhdrl_la-hdrl_imagelist_view.Plo  libhdrl_la-hdrl_iter.Plo  libhdrl_la-hdrl_lacosmics.Plo  libhdrl_la-hdrl_multiiter.Plo  libhdrl_la-hdrl_overscan.Plo  libhdrl_la-hdrl_parameter.Plo  libhdrl_la-hdrl_prototyping.Plo  libhdrl_la-hdrl_random.Plo  libhdrl_la-hdrl_response.Plo  libhdrl_la-hdrl_sigclip.Plo  libhdrl_la-hdrl_spectrum.Plo  libhdrl_la-hdrl_spectrum_resample.Plo  libhdrl_la-hdrl_spectrum_shift.Plo  libhdrl_la-hdrl_spectrumlist.Plo  libhdrl_la-hdrl_strehl.Plo  libhdrl_la-hdrl_utils.Plo  libhdrl_la-igam.Plo
hdrldemo-1.2.0/hdrl/catalogue/: Makefile  Makefile.in  hdrl_cat_areals.c  hdrl_cat_background.c  hdrl_cat_background.h  hdrl_cat_casu.c  hdrl_cat_conf.c  hdrl_cat_filter.c  hdrl_cat_overlp.c  hdrl_cat_table.c  hdrl_cat_utils.c
hdrldemo-1.2.0/hdrl/catalogue/.deps/: hdrl_cat_apclust.Plo  hdrl_cat_apio.Plo  hdrl_cat_apline.Plo  hdrl_cat_areals.Plo  hdrl_cat_background.Plo  hdrl_cat_casu.Plo  hdrl_cat_classify.Plo  hdrl_cat_conf.Plo  hdrl_cat_extend.Plo  hdrl_cat_filter.Plo  hdrl_cat_moments.Plo  hdrl_cat_overlp.Plo  hdrl_cat_phopt.Plo  hdrl_cat_polynm.Plo  hdrl_cat_radii.Plo  hdrl_cat_seeing.Plo  hdrl_cat_solve.Plo  hdrl_cat_statistics.Plo  hdrl_cat_table.Plo  hdrl_cat_terminate.Plo  hdrl_cat_utils.Plo  hdrl_cat_utils_sort.Plo
hdrldemo-1.2.0/hdrl/catalogue/tests/: Makefile  Makefile.in  hdrl_cat_background-test.c
hdrldemo-1.2.0/hdrl/tests/: Makefile  Makefile.am  Makefile.in  hdrl_collapse-test.c  hdrl_fpn-test.c  hdrl_frameiter-test.c  hdrl_imagelist_basic-test.c  hdrl_overscan-test.c  hdrl_utils-test.c
hdrldemo-1.2.0/hdrldemo/: Makefile  Makefile.am  Makefile.in  hdrldemo_dfs.c  hdrldemo_dfs.h  hdrldemo_iterator.c  hdrldemo_iterator.h  hdrldemo_python.c  hdrldemo_python.h  hdrldemo_utils.c  hdrldemo_utils.h  test_python.c
hdrldemo-1.2.0/hdrldemo/.deps/: hdrldemo_dfs.Plo  hdrldemo_iterator.Plo  hdrldemo_python.Plo  hdrldemo_utils.Plo
hdrldemo-1.2.0/hdrldemo/tests/: Makefile  Makefile.am  Makefile.in  hdrldemo_dfs-test.c  hdrldemo_iterator-test.c  hdrldemo_utils-test.c
hdrldemo-1.2.0/hdrldemo/tests/.deps/: hdrldemo_dfs-test.Po  hdrldemo_iterator-test.Po  hdrldemo_utils-test.Po
hdrldemo-1.2.0/m4macros/: hdrl.m4
hdrldemo-1.2.0/recipes/: Makefile  Makefile.am  Makefile.in  hdrldemo_bias.c  hdrldemo_bpm_2d.c  hdrldemo_bpm_3d.c  hdrldemo_bpm_fit.c  hdrldemo_bpm_lacosmic.c  hdrldemo_catalogue.c  hdrldemo_dar.c  hdrldemo_efficiency.c  hdrldemo_flat_nir.c  hdrldemo_flat_opt.c  hdrldemo_fpn.c  hdrldemo_fringe.c  hdrldemo_overscan.c  hdrldemo_response.c  hdrldemo_strehl.c
hdrldemo-1.2.0/recipes/.deps/: hdrldemo_bias.Plo  hdrldemo_bpm_2d.Plo  hdrldemo_bpm_3d.Plo  hdrldemo_bpm_fit.Plo  hdrldemo_bpm_lacosmic.Plo  hdrldemo_catalogue.Plo  hdrldemo_dar.Plo  hdrldemo_efficiency.Plo  hdrldemo_flat_nir.Plo  hdrldemo_flat_opt.Plo  hdrldemo_fpn.Plo  hdrldemo_fringe.Plo  hdrldemo_overscan.Plo  hdrldemo_response.Plo  hdrldemo_strehl.Plo
hdrldemo-1.2.0/regtests/: Makefile  Makefile.in
hdrldemo-1.2.0/regtests/tests/: Makefile  Makefile.am  Makefile.in
scripts/: get_header_info.py
workdir/: BadPixels.html  BadPixels.ipynb  DetectorProperties.html  DetectorProperties.ipynb  Example.ipynb  HDRL_test.ipynb  Linearity.html  Linearity.ipynb  MessingAround.ipynb  PSF_wrt_DF_Nov12.ipynb  Pickup_Noise.ipynb  Test_Diffraction.ipynb  Untitled.ipynb  Untitled2.ipynb  Untitled3.ipynb  linearity.py  linearity_coef
workdir/.ipynb_checkpoints/: BadPixels-checkpoint.ipynb  DetectorProperties-checkpoint.ipynb  Example-checkpoint.ipynb  Linearity-checkpoint.ipynb  MessingAround-checkpoint.ipynb  Untitled-checkpoint.ipynb
